--- a/services/api/package.json
+++ b/services/api/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.2",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "plaid": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.8",
