--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -21,7 +21,10 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@types/react-plaid-link": "^1.3.0",
+    "axios": "^0.19.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-plaid-link": "^1.5.0"
   }
 }
