--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
@@ -25,6 +26,9 @@
     "axios": "^0.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-plaid-link": "^1.5.0"
+    "react-plaid-link": "^1.5.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
