--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.2",
+    "@types/uuid": "^3.4.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "pg": "^7.17.1",
-    "plaid": "^4.3.0"
+    "plaid": "^4.3.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.8",
