--- a/services/api/package.json
+++ b/services/api/package.json
@@ -16,12 +16,16 @@
     "@types/connect-pg-simple": "^4.2.0",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
+    "@types/passport": "^1.0.2",
+    "@types/passport-local": "^1.0.33",
     "@types/uuid": "^3.4.6",
     "body-parser": "^1.19.0",
     "connect-pg-simple": "^6.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "moment": "^2.24.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^7.17.1",
     "plaid": "^4.3.0",
     "uuid": "^3.4.0"
