--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -32,11 +32,13 @@
   },
   "dependencies": {
     "@types/react-plaid-link": "^1.3.0",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-plaid-link": "^1.5.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
