--- a/services/ui/.babelrc
+++ b/services/ui/.babelrc
@@ -1,16 +1,15 @@
 {
-    "presets": [
-        "@babel/react",
-        "@babel/typescript",
-        [
-            "@babel/env",
-            {
-                "modules": false,
-                "targets": {
-                    "chrome": "58",
-                    "ie": "11"
-                }
-            }
-        ]
+  "presets": [
+    "@babel/react",
+    "@babel/typescript",
+    [
+      "@babel/env",
+      {
+        "modules": false,
+        "targets": {
+          "node": "current",
+        }
+      }
     ]
+  ]
 }
