--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@types/passport": "^1.0.2",
     "@types/react-plaid-link": "^1.3.0",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.1",
