--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -31,10 +31,12 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/passport": "^1.0.2",
     "@types/react-plaid-link": "^1.3.0",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.1",
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-plaid-link": "^1.5.0",
