--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
